--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-protractor": "0.0.11"
   },
   "devDependencies": {
-    "MD5": "^1.2.1"
+    "MD5": "^1.2.1",
+    "gulp": "^3.9.1"
   }
 }
